--- a/docs/字符串匹配.md
+++ b/docs/字符串匹配.md
@@ -1,6 +1,8 @@
 为什么技术分享开始于字符串匹配？
 1. 计算机四门基础课的关系决定先讲算法（以后再讲）
 2. 算法+后端开发就是crud，c就是找到位置插入，r就是找到读取，u就是找到更新，d就是找到删除，所以查找是最基础要掌握的算法
+3. 算法其实就是规律的使用，最简单的无序变有序的方式就是排序，其次就是字符串匹配中体现的规律使用方法
+
 
 一、先叨叨一些算法
 
