--- a/doc/后端开发学习系列一：朋友圈实现学习.md
+++ b/doc/后端开发学习系列一：朋友圈实现学习.md
@@ -19,3 +19,5 @@
     对应到分布式系统，和四门专业课的对应关系就更明显了。所有的涉及数据存储以及持久化的部分，都可以对应到数据库，最后对应到数据结构对应到存储器；所有不涉及存储的部分（比如RPC），都可以对应到计算机网络，然后对应到输入输出；而我们实现的服务部分，都可以对应到算法然后对应到运算器和控制器；一个完整的分布式系统的表现就像一个更大的操作系统。
     
     我们当下其实也刚刚走到第三层，分布式阶段。未来的未来还会有更大的体系结构，但其实本质并没有变化。但是每个阶段又会引入新的知识，新的定义，去代表这个阶段的特点。就像分布式系统阶段的代表是分布式一致性理论，就像单机操作系统阶段的代表虚拟化，持久化，就像CPU阶段的代表多核并发等等。CPU不强调数据一致吗？为什么？CPU不需要虚拟技术，不需要数据持久化吗？为什么？当大家去思考这些问题，就会发现答案就在哪里。在这个根基之上就可以构建后端开发的坚实基础。
+    
+    太爱唠叨做人的道理，说明这是自己的缺点，切记
