--- a/doc/后端开发学习系列二：朋友圈实现学习-存储选型.md
+++ b/doc/后端开发学习系列二：朋友圈实现学习-存储选型.md
@@ -1,4 +1,33 @@
-没找到最新的数据，以19年数据为例
+一、原始数据：
+1. 2019年1月：每日消息：450亿
+2. 用户日活：10亿
+3. 凌晨1分钟内：46TB数据
+4. 34%的流量与30%的时间
+5. 每24小时100亿次聊天点击
+6. 每天10亿次微信支付
+7. 8.2亿次红包点击
+8. 早高峰每分钟25万次公交卡服务
+9. 日4.1亿次音频和视频
+10. 总QPS：1亿，3000多个服务提供，机器数量？2万台（应该是物理机，容器至少百万级别吧？）最高峰是平时10倍，比如说过年
 
 
-https://www.businessofapps.com/data/wechat-statistics/
+二、二次数据：
+1. 日450亿条消息预计占存储15T（音视频单独存储），不能使用mysql（3副本50T）
+2. 平均每人每日4.5条消息
+3. 平均消息QPS：52万*5*3（1000台足以？）
+4. 平均支付QPS: 11574*5*3（按2/8需乘以5）（30%比较安全，再乘以3）
+
+三、分布式系统只是在单机系统上加了分布式协议；分布式存储也是在单机存储上加了分布式协议
+
+四、存储选型，按以下TODO分析：
+1. TiDB适合业务量是多少，为什么？（实现）
+2. 腾讯paxosStore实现
+3. mysql方案适合业务量是多少，为什么？（实现）
+4. mysql分库分表也不行吗？为什么？
+5. mysql分库分表的实现方案
+
+
+
+
+
+参考：没找到最新的数据，以19年数据为例：https://www.businessofapps.com/data/wechat-statistics/
