--- a/doc/后端开发学习系列二：朋友圈实现学习-存储选型.md
+++ b/doc/后端开发学习系列二：朋友圈实现学习-存储选型.md
@@ -21,10 +21,11 @@
 
 四、存储选型，按以下TODO分析：
 1. TiDB适合业务量是多少，为什么？（实现）
-2. 腾讯paxosStore实现
-3. mysql方案适合业务量是多少，为什么？（实现）
-4. mysql分库分表也不行吗？为什么？
-5. mysql分库分表的实现方案
+2. TiDB与mysql的区别？
+3. 腾讯paxosStore实现
+4. mysql方案适合业务量是多少，为什么？（实现）
+5. mysql分库分表也不行吗？为什么？
+6. mysql分库分表的实现方案
 
 
 
