--- a/doc/后端开发学习系列一：朋友圈实现学习-序.md
+++ b/doc/后端开发学习系列一：朋友圈实现学习-序.md
@@ -1,8 +1,8 @@
-### 本次学习，只学技术，计划从一个分布式系统设计开始学起，遇到问题解决问题，解决一个分布式系统中可能遇到的所有问题主要为止，不定位到计算机硬件实现原理不算解决。
+### 本次学习，只学技术，计划从一个分布式系统设计开始学起，遇到问题解决问题，解决一个分布式系统中可能遇到的所有主要问题，持续问why，直到得到一个大家能接受的共识为止。
 
-### 当然讲述会有主次（关于顺序的必要性，非技术，大家感兴趣可以私下交流），有时会BFS、有时会DFS，直到覆盖后端开发的核心内容（四大专业课；一门语言；一种通信框架；多种存储框架：包含但不限于缓存、消息队列和数据库，sql、nosql、newsql、时序数据库；以及背后设计的思想与理论）。
+### 当然讲述会有主次（关于顺序的必要性，非技术，大家感兴趣可以私下交流），有时会BFS、有时会DFS，直到覆盖后端开发的核心内容（四大专业课；一门语言；一种通信框架；多种存储框架：包含但不限于缓存、消息队列和数据库，sql、nosql、newsql、时序数据库；以及背后涉及的思想与理论）。
 
-### 本系列不会用大篇幅讲诉安全、大数据技术、机器学习、搜索引擎、后端提效工具、容器技术、系统稳定性等等
+### 本系列不会用大篇幅讲诉安全、大数据技术、机器学习、搜索引擎、后端提效工具、容器技术、系统稳定性等等话题
 
 ##### 废话说在后面：先写出来，但是不用看，用来以后check
 
