--- a/doc/后端开发学习系列一：朋友圈实现学习-序.md
+++ b/doc/后端开发学习系列一：朋友圈实现学习-序.md
@@ -6,18 +6,18 @@
 
 ##### 废话说在后面：先写出来，但是不用看，用来以后check
 
-    最近得到一个评价说我技术深度不够，而且知识不够系统，对我触动很大。因为知识的系统性一直是我引以为傲的东西，而我为什么没有表达出来，问题出在了哪里？技术深度不够，又表现在哪里？我想这个表象并不是问题的本质所在。我想找到导致这个评价的原因。
+    最近得到一个评价说我技术深度不够而且知识不够系统，对我触动很大。因为知识的系统性一直是我引以为傲的东西，而我却没有表达出来，这是为什么？技术深度不够，又表现在哪里？我想找到导致这个评价的本质原因，看看究竟事实就是这样还是由于表达能力不足。如果是表达能力不足，那么就需要加强表达，我想最简单的加强方式就是持续不断的重复，直到可以正确表达，这也是我写这个系列文章的直接原因。
     
-    如何找到呢？我想首先需要记录下现在自己对于技术的理解，然后再去努力提升自己，再回看自己现在的理解？看看是不是真的不够系统，真的不够深度。我有一个想法：深度确实应该远远不够，系统不应该不够，不知道自己对于自己的认知是否合理？
+    那如果真的是技术深度不够且不够系统，自己对自己的认知出现了偏差呢，如何确认？我想首先至少需要记录下现在自己对于技术的理解，然后再去努力提升自己，再回看自己现在的理解？看看是不是真的不够系统，真的不够深度。我现在有一个想法：深度确实应该远远不够，系统不应该不够，不知道自己对于自己的认知是否合理？
     
     其实语言的表现能力远远不如图，表达能力的不足确实是自己之前所欠缺的。这次我会尽最大的努力，把心中所想表达清楚，让更多的人可以理解。废话不多说，快速进入主题。
     
-    计算机是人对自己的抽象。计算机由运算器，控制器、存储器、输入、输出五部分组成，现在所有的计算机技术都不能脱离这个基础，估计永远也不会脱离，而且现在其实也没有走太远。这五部分中输入输出可以忽略，或者可以合并为一个抽象传输（也是对人与人之间沟通的抽象），运算器与控制器可以合并为一个抽象（是对人思考能力的抽象），而存储比较独立（是人的思考与沟通在时间维度的呈现载体）。
+    计算机是人对自己的抽象。计算机由运算器，控制器、存储器、输入、输出五部分组成，现在所有的计算机技术都不能脱离这个基础，估计永远也不会脱离，而且现在其实也没有走太远。这五部分中输入输出可以忽略，或者可以合并为一个抽象概念“通信”（也是对人与人之间沟通的抽象），运算器与控制器可以合并为一个抽象概念“计算”（是对人思考能力的抽象），而存储比较独立（是人的思考与沟通在时间维度的呈现载体）。
     
-    计算机一共有四门主要的专业课，数据结构和算法？数据结构是存储，算法是数据分析方法，对应控制器和运算器，所以说数据结构和算法是计算机的根本，是所有其他三门专业课的基础；操作系统是计算机的软件抽象，包含所有五部分，现代计算机构建于操作系统之上；数据库对应存储；计算机网络是数据传输。
+    计算机一共有四门主要的专业课，数据结构和算法？数据结构是存储，算法是计算，所以说数据结构和算法是计算机的根本，是所有其他三门专业课的基础；操作系统是计算机的软件抽象，包含所有五部分，现代计算机构建于操作系统之上；数据库对应存储，但是数据库不只是存储，也会涉及通信和计算（所以后续学习的主要关注点也在存储选型）；计算机网络是通信。
     
-    对应到分布式系统，和四门专业课的对应关系就更明显了。所有的涉及数据存储以及持久化的部分，都可以对应到数据库，最后对应到数据结构对应到存储器；所有不涉及存储的部分（比如RPC），都可以对应到计算机网络，然后对应到输入输出；而我们实现的服务部分，都可以对应到算法然后对应到运算器和控制器；一个完整的分布式系统的表现就像一个更大的操作系统。
+    对应到分布式系统，和四门专业课的对应关系就更明显了。所有的涉及数据存储以及持久化的部分，都可以对应到数据库，最后对应到数据结构；所有不涉及存储的部分（比如RPC），都可以对应到计算机网络，然后对应到通信；而我们实现的服务部分，都可以对应到算法归类到计算；一个完整的分布式系统的表现就像一个更大的操作系统（或者数据库）。
     
-    我们当下其实也刚刚走到第三层，分布式阶段。未来的未来还会有更大的体系结构，但其实本质并没有变化。但是每个阶段又会引入新的知识，新的定义，去代表这个阶段的特点。就像分布式系统阶段的代表是分布式一致性理论，就像单机操作系统阶段的代表虚拟化，持久化，就像CPU阶段的代表多核并发等等。CPU不强调数据一致吗？为什么？CPU不需要虚拟技术，不需要数据持久化吗？为什么？当大家去思考这些问题，就会发现答案就在哪里。在这个根基之上就可以构建后端开发的坚实基础。
+    我们当下其实也刚刚走到第三层，分布式阶段。未来的未来还会有更大的体系结构，其实本质并没有变化。每个阶段又会引入新的知识、新的定义，去代表这个阶段的特点。就像分布式系统阶段的代表是分布式一致性理论；就像单机操作系统阶段的代表虚拟化，持久化；就像CPU阶段的代表多核并发等等。CPU不强调数据一致吗？为什么？CPU不需要虚拟技术，不需要数据持久化吗？为什么？当大家去思考这些问题，就会发现答案就在哪里。在这个根基之上就可以构建后端开发的坚实基础。
     
     太爱唠叨做人的道理，说明这是自己的缺点，切记
