--- a/doc/后端开发学习系列二：朋友圈实现学习-存储选型.md
+++ b/doc/后端开发学习系列二：朋友圈实现学习-存储选型.md
@@ -25,7 +25,9 @@
 3. 腾讯paxosStore实现
 4. mysql方案适合业务量是多少，为什么？（实现）
 5. mysql分库分表也不行吗？为什么？
+  部分回答：https://pingcap.com/blog-cn/how-do-we-build-tidb/
 6. mysql分库分表的实现方案
+
 
 问题按重要程度排序，提问题并不一定回答，因为随时会插入更重要的问题，永远做最重要的那件事
 
