--- a/doc/后端开发学习系列二：朋友圈实现学习-存储选型.md
+++ b/doc/后端开发学习系列二：朋友圈实现学习-存储选型.md
@@ -14,7 +14,7 @@
 二、二次数据：
 1. 日450亿条消息预计占存储15T（音视频单独存储），不能使用mysql（3副本50T）
 2. 平均每人每日4.5条消息
-3. 平均消息QPS：52万 x 5 x 3（1000台docker足以？如果以类似redis的能力，20台物理机应该可以）
+3. 平均消息QPS：52万 x 5 x 3（1000台docker足以？如果以类似redis的能力，20台物理机应该可以）(流量放大？)
 4. 平均支付QPS: 11574 x 5 x 3（按2/8需乘以5）（30%比较安全，再乘以3）
 
 三、分布式系统只是在单机系统上加了分布式协议；分布式存储也是在单机存储上加了分布式协议
