--- a/doc/后端开发学习系列一：朋友圈实现学习-序.md
+++ b/doc/后端开发学习系列一：朋友圈实现学习-序.md
@@ -20,4 +20,6 @@
     
     我们当下其实也刚刚走到第三层，分布式阶段。未来的未来还会有更大的体系结构，其实本质并没有变化。每个阶段又会引入新的知识、新的定义，去代表这个阶段的特点。就像分布式系统阶段的代表是分布式一致性理论；就像单机操作系统阶段的代表虚拟化，持久化；就像CPU阶段的代表多核并发等等。CPU不强调数据一致吗？为什么？CPU不需要虚拟技术，不需要数据持久化吗？为什么？当大家去思考这些问题，就会发现答案就在哪里。在这个根基之上就可以构建后端开发的坚实基础。
     
+    为什么要明白这个对应关系，因为这样利于相关理论的泛化应用，帮助我们记忆
+    
     太爱唠叨做人的道理，说明这是自己的缺点，切记
