--- a/docs/后端开发学习系列五：后端技术核心.md
+++ b/docs/后端开发学习系列五：后端技术核心.md
@@ -1,1 +1,18 @@
+### 我自己可以活的好好的，为什么要融入社会？一切的一切都是共识而已，或者也可以叫约定。都是一些未解问题，属于人从哪里来要到哪里去的关联问题。
+  可以特立独行，但不必过于追求，建议积极融入社会。为什么？很容易得出结论，这里不讲，技术无关，感兴趣可以私下联系。
+  积极融入社会的好处是什么？可以享受人类共同取得的成果。
+  积极融入社会对自身技术的好处是什么？轻松理解技术的根基所在，从而揭开技术的神秘面纱
 
+### 当然讲述会有主次（关于顺序的必要性，非技术，大家感兴趣可以私下交流），有时会BFS、有时会DFS，直到覆盖后端开发的核心内容（四大专业课；一门语言；一种通信框架；多种存储框架：包含但不限于缓存、消息队列和数据库，sql、nosql、newsql、时序数据库；以及背后涉及的思想与理论）。
+
+  计算机是人对自己的抽象。计算机由运算器，控制器、存储器、输入、输出五部分组成，现在所有的计算机技术都不能脱离这个基础，估计永远也不会脱离，而且现在其实也没有走太远。这五部分中输入输出可以忽略，或者可以合并为一个抽象概念“通信”（也是对人与人之间沟通的抽象），运算器与控制器可以合并为一个抽象概念“计算”（是对人思考能力的抽象），而存储比较独立（是人的思考与沟通在时间维度的呈现载体）。
+    
+    计算机一共有四门主要的专业课，数据结构和算法？数据结构是存储，算法是计算，所以说数据结构和算法是计算机的根本，是所有其他三门专业课的基础；操作系统是计算机的软件抽象，包含所有五部分，现代计算机构建于操作系统之上；数据库对应存储，但是数据库不只是存储，也会涉及通信和计算（所以后续学习的主要关注点也在存储选型）；计算机网络是通信。
+    
+    对应到分布式系统，和四门专业课的对应关系就更明显了。所有的涉及数据存储以及持久化的部分，都可以对应到数据库，最后对应到数据结构；所有不涉及存储的部分（比如RPC），都可以对应到计算机网络，然后对应到通信；而我们实现的服务部分，都可以对应到算法归类到计算；一个完整的分布式系统的表现就像一个更大的操作系统（或者数据库）。
+    
+    我们当下其实也刚刚走到第三层，分布式阶段。未来的未来还会有更大的体系结构，其实本质并没有变化。每个阶段又会引入新的知识、新的定义，去代表这个阶段的特点。就像分布式系统阶段的代表是分布式一致性理论；就像单机操作系统阶段的代表虚拟化，持久化；就像CPU阶段的代表多核并发等等。CPU不强调数据一致吗？为什么？CPU不需要虚拟技术，不需要数据持久化吗？为什么？当大家去思考这些问题，就会发现答案就在哪里。在这个根基之上就可以构建后端开发的坚实基础。
+    
+    为什么要明白这个对应关系，因为这样利于相关理论的泛化应用，帮助我们记忆
+    
+    太爱唠叨做人的道理，说明这是自己的缺点，切记
