--- a/docs/后端开发学习系列一：序.md
+++ b/docs/后端开发学习系列一：序.md
@@ -23,3 +23,5 @@
     为什么要明白这个对应关系，因为这样利于相关理论的泛化应用，帮助我们记忆
     
     太爱唠叨做人的道理，说明这是自己的缺点，切记
+
+##### 可以参考之前总结的对于人的抽象：https://zhuanlan.zhihu.com/p/148214047
