--- a/docs/后端开发学习系列五：后端技术核心.md
+++ b/docs/后端开发学习系列五：后端技术核心.md
@@ -1,18 +1,84 @@
-### 我自己可以活的好好的，为什么要融入社会？一切的一切都是共识而已，或者也可以叫约定。都是一些未解问题，属于人从哪里来要到哪里去的关联问题。
+后端关键技术：
+    1. 分布式共识协议：raft，quorum
+    2. 存储：
+    3.    海量数据存储解决： 分治sharding
+    4.    提高查询效率：空间换时间index，空间换时间缓存
+    5.    提高正确性：多副本
+    6. 通信：TCP/IP，HTTP，建立链接慢，保持无用链接浪费资源（要是不怕浪费多好）
+    7. 操作系统：性能损耗在慢的地方，io最慢，中断慢，缓存不命中慢   
+
+    1. 网络io的关键技术：io多路复用，长链接，长轮询
+    2. 磁盘io的关键技术：调度算法，顺序读写，DMA
+    3. 软中断问题解决：协程
+    4. 缓存提速：局部性原理，多级缓存，mesi，write buffer（凡事预则立，预就是提前做，是加速的最优方法，其实无所谓提前，时间也是空间）
+    5. 单机内并发多副本问题：原子性，可见性，有序性，happens-before，as-is-serial
+    6. mysql：存储引擎，索引，事务，行锁，mysql瓶颈
+    7. 索引：B+树（关联磁盘io技术），自适应哈希（哈希就是快），索引下推
+    8. 事务：ACID，WAL，优化器，mvcc，读写锁，锁升级
+    9. 优化器：去掉没用的，选择适合自己的，选择适合存储结构的，取最少的数据，能提前就提前
+    10. redis：底层数据结构优化（空间换时间，预处理），网络io技术使用，磁盘io技术使用
+    11. 消息队列：append，sharding，batch，at least once
+    12. tidb：raft，spanner
+    13. rpc：所有框架的rpc都类似，参考http2
+    14. 服务发现与注册：所有框架都类似，无难度
+    15. 容灾：多数是主备，raft也是主备升级
+    16. raft：选主，日志同步，安全
+    17. cpu：多核多线程，缓存行，预
+    18. 操作系统：微内核
+    19. java：jvm对操作系统屏蔽不错，既是优势也是劣势；
+      golang：协程
+      rust：全新的垃圾回收思想，简单又合理
+
+
+
+
+人没有什么解决问题的能力，无非就是把大问题拆成小问题，直到匹配自身解决问题能力为止
+
+
+
+
+
+
+
+
+##### 在第一章序言中提到，明白计算机的抽象，可以帮助我们记忆，帮助我们理解计算机，那如何帮助呢？知识海洋太庞大，我们先记住其中的关键部分：
+    整部人类史都是存储上的不断迭代，所有的知识都是人类的共识产物，生产的过程就是计算与通信。计算机也是如此
+    整部计算机史围绕存储、计算与通信展开，存储即只求正确性、海量；计算追求速度（就像人的生活追求效率一样）；通信追求正确和速度，因为通信是一个中间过程
+    
+##### 存储 
+      对应数据库的一部分（因为数据库也包含计算和通信），如何保证正确性？多副本。如何保证海量？切分。
+      多副本引入一致性问题，不一致就失去了多副本的意义，这是正确性的一部分。一致性又引入一致的时效，因为不保证超时时间内的一致，有可能失去意义。这就是CAP和BASE的来源
+      当技术更新迭代，分布式的通信能力能和总线一样，任何计算都能瞬间返回，哪里还需要那么多新的理论？世界都简单了。
+      
+    如何保证正确性：多副本？难道一个副本就不能保证正确吗？如果一个副本就能保证正确，分布式协议也会丧失大部分存在的意义。
+      多副本的最佳实践是不是，每个副本能力是一样的？我们为什么又要分主从呢？还是存储、通信、计算能力不够所限制。
+      
+    如何保证海量：简单切分就可以，也可以叫sharding，也可以叫分治。天下大势合久必分，分久必合。和分治就有合并。
+    
+    如何解决一致性问题？最佳解法还是把能力提高到可接受的时间限度内，那么因为这方面能力强了，也就不会成为问题了。脱离时间的一致性是无意义的。
+      一致性其实是进入了一生二的领域，一个人是不会有一致性问题的，一个副本是不会有一致性问题的。一生二之后，二约定一就变得无比重要，二约定一的过程就是共识。基本的共识算法都符合一个规则就是少数服从多数（其实社会远比这个复杂，我们看到的只是假象）
+      
+    如何解决时效问题：单机的时效问题依赖单机能力，多机时效问题又引入了时间共识。时间在人类社会其实只是一个共识。时间在计算机世界也是一个共识，计算机领域关注绝对时间，更关注时序关系。这也是分布式领域解决的主要问题。  
+      
+    如果分布式通信能力和总线一样，也不会有通信的正确和速度问题，那分布式协议又丧失了另外一部分意义
+    
+##### 计算
+    计算依赖于存储，就像算法依赖于数据结构
+    计算领域在解决什么问题？又遇到了什么问题？快速算完的问题，天下武功唯快不破。如果所有计算都不需要时间，那么就无所谓存储无所谓通信无所谓计算了。就是神说要有光就有了光了。（其实早晚有一天会无限接近）
+    计算领域又遇到了什么问题？后端（通俗意义的后端）遇到的计算问题很少了，多数是如何从广义和狭义的角度降低时间复杂度，降低每个原子操作的执行时间的问题。那如何降低呢？找重点，找瓶颈
+    
+##### 通信
+    通信又关注正确，又关注速度
+    
+##### 另一个维度：安全
+    这个社会要没有坏人，社会成本会降低很多
+    
+##### 如果改变共识，大家不追求效率，不追求大，不追求安全，一切都无所谓。那会是什么样一个社会？人类是DNA多副本的产物？    
+
+
+##### 我自己可以活的好好的，为什么要融入社会？一切的一切都是共识而已，或者也可以叫约定。都是一些未解问题，属于人从哪里来要到哪里去的关联问题。
   可以特立独行，但不必过于追求，建议积极融入社会。为什么？很容易得出结论，这里不讲，技术无关，感兴趣可以私下联系。
   积极融入社会的好处是什么？可以享受人类共同取得的成果。
   积极融入社会对自身技术的好处是什么？轻松理解技术的根基所在，从而揭开技术的神秘面纱
 
-### 当然讲述会有主次（关于顺序的必要性，非技术，大家感兴趣可以私下交流），有时会BFS、有时会DFS，直到覆盖后端开发的核心内容（四大专业课；一门语言；一种通信框架；多种存储框架：包含但不限于缓存、消息队列和数据库，sql、nosql、newsql、时序数据库；以及背后涉及的思想与理论）。
 
-  计算机是人对自己的抽象。计算机由运算器，控制器、存储器、输入、输出五部分组成，现在所有的计算机技术都不能脱离这个基础，估计永远也不会脱离，而且现在其实也没有走太远。这五部分中输入输出可以忽略，或者可以合并为一个抽象概念“通信”（也是对人与人之间沟通的抽象），运算器与控制器可以合并为一个抽象概念“计算”（是对人思考能力的抽象），而存储比较独立（是人的思考与沟通在时间维度的呈现载体）。
-    
-    计算机一共有四门主要的专业课，数据结构和算法？数据结构是存储，算法是计算，所以说数据结构和算法是计算机的根本，是所有其他三门专业课的基础；操作系统是计算机的软件抽象，包含所有五部分，现代计算机构建于操作系统之上；数据库对应存储，但是数据库不只是存储，也会涉及通信和计算（所以后续学习的主要关注点也在存储选型）；计算机网络是通信。
-    
-    对应到分布式系统，和四门专业课的对应关系就更明显了。所有的涉及数据存储以及持久化的部分，都可以对应到数据库，最后对应到数据结构；所有不涉及存储的部分（比如RPC），都可以对应到计算机网络，然后对应到通信；而我们实现的服务部分，都可以对应到算法归类到计算；一个完整的分布式系统的表现就像一个更大的操作系统（或者数据库）。
-    
-    我们当下其实也刚刚走到第三层，分布式阶段。未来的未来还会有更大的体系结构，其实本质并没有变化。每个阶段又会引入新的知识、新的定义，去代表这个阶段的特点。就像分布式系统阶段的代表是分布式一致性理论；就像单机操作系统阶段的代表虚拟化，持久化；就像CPU阶段的代表多核并发等等。CPU不强调数据一致吗？为什么？CPU不需要虚拟技术，不需要数据持久化吗？为什么？当大家去思考这些问题，就会发现答案就在哪里。在这个根基之上就可以构建后端开发的坚实基础。
-    
-    为什么要明白这个对应关系，因为这样利于相关理论的泛化应用，帮助我们记忆
-    
-    太爱唠叨做人的道理，说明这是自己的缺点，切记
