--- a/docs/后端开发学习系列五：后端技术核心.md
+++ b/docs/后端开发学习系列五：后端技术核心.md
@@ -28,8 +28,8 @@
     19. java：jvm对操作系统屏蔽不错，既是优势也是劣势；
       golang：协程
       rust：全新的垃圾回收思想，简单又合理
-
-
+    20. 算法就是找规律，杂乱无章->有序->特定顺序。数据结构是数据的空间表示，算法是数据的时间表示。空间=时间。
+    
 
 
 人没有什么解决问题的能力，无非就是把大问题拆成小问题，直到匹配自身解决问题能力为止
