--- a/docs/后端开发学习系列五：后端技术核心.md
+++ b/docs/后端开发学习系列五：后端技术核心.md
@@ -75,6 +75,7 @@
     
 ##### 如果改变共识，大家不追求效率，不追求大，不追求安全，一切都无所谓。那会是什么样一个社会？人类是DNA多副本的产物？    
 
+TODO：核心技术的实现代码
 
 ##### 我自己可以活的好好的，为什么要融入社会？一切的一切都是共识而已，或者也可以叫约定。都是一些未解问题，属于人从哪里来要到哪里去的关联问题。
   可以特立独行，但不必过于追求，建议积极融入社会。为什么？很容易得出结论，这里不讲，技术无关，感兴趣可以私下联系。
