--- a/docs/后端开发学习系列五：后端技术核心.md
+++ b/docs/后端开发学习系列五：后端技术核心.md
@@ -11,7 +11,7 @@
     2. 磁盘io的关键技术：调度算法，顺序读写，DMA
     3. 软中断问题解决：协程，管态目态，零拷贝
     4. 缓存提速：局部性原理，多级缓存，mesi，write buffer（凡事预则立，预就是提前做，是加速的最优方法，其实无所谓提前，时间也是空间）
-    5. 单机内并发多副本问题：原子性，可见性，有序性，happens-before，as-is-serial
+    5. 单机内并发多副本问题：原子性，可见性，有序性，happens-before，as-i-serial
     6. mysql：存储引擎，索引，事务，行锁，mysql瓶颈
     7. 索引：B+树（关联磁盘io技术），自适应哈希（哈希就是快），索引下推
     8. 事务：ACID，WAL，优化器，mvcc，读写锁，锁升级
