--- a/docs/后端开发学习系列五：后端技术核心.md
+++ b/docs/后端开发学习系列五：后端技术核心.md
@@ -29,6 +29,7 @@
       golang：协程
       rust：全新的垃圾回收思想，简单又合理
     20. 算法就是找规律，杂乱无章->有序->特定顺序。数据结构是数据的空间表示，算法是数据的时间表示。空间=时间。
+    21. 分布式利器：sharding，重试+超时
     
 
 
